<resources>
    <string name="app_name">bondoman</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_graph_page">Graph</string>
    <string name="title_scan_page">Scan</string>
    <string name="title_settings_page">Settings</string>
    <string name="title_home_page">Home</string>

    <string name="defDate">01/01/2021</string>
    <string name="defName">Name</string>
    <string name="defAmount">Rp. 0</string>
    <string name="defCategory">Category</string>


    <!--    Tambah Transaksi    -->
    <string name="label_judul">Judhul</string>
    <string name="label_nominal">Rega</string>
    <string name="label_kategori">Bab</string>
    <string-array name="kategori_options">
        <item>@string/kategori_pengeluaran</item>
        <item>@string/kategori_pemasukan</item>
    </string-array>
    <string name="label_lokasi">Latar</string>

    <string name="kategori_pengeluaran">Pengeluaran</string>
    <string name="kategori_pemasukan">Pemasukan</string>
    <string name="scan_header">SCAN</string>
    <string name="twibbon_header">TWIBBON</string>
    <string name="tumbas_header">TUMBAS</string>
    <string name="graf_header">GRAF</string>
    <string name="settings_header">PENATANAN</string>

    <!--    Twibbon Page    -->
    <string name="twibbon_after_take">retake? click the shutter button again</string>
    <string name="twibbon_back">Back to scan page</string>
    <string name="twibbon_frame">Twibbon frame</string>
    <string name="twibbon_take_picture">Take picture</string>
    <string name="twibbon_flip_camera">Flip camera</string>

    <!--    Scan Page    -->
    <string name="scan_take_picture">Take picture</string>
    <string name="scan_to_twibbon_1">Looking for twibbon?</string>
    <string name="scan_to_twibbon_2">click here</string>
    <string name="select_photos">"  select photos  "</string>

    <!--    Item Transaction    -->
    <string name="item_transaction_edit">Edit</string>
    <string name="item_transaction_map">Map icon</string>
    <string name="item_transaction_judul">Kerupuk Kulit</string>
    <string name="item_transaction_price">IDR5.000</string>
    <string name="item_transaction_date">14/03/2024</string>
    <string name="item_transaction_location">Seno Medika</string>
    <string name="item_transaction_logo">Tumbas or upah logo</string>

    <!--    Transaction Page    -->
    <string name="transaction_balance">Arta Sampeyan</string>
    <string name="transaction_add">+</string>
    <string name="lost_network">Koneksi sampeyan ilang</string>

</resources>