<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:baselineAligned="false"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:orientation="vertical"
            android:layout_gravity="center"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/image_transaction"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                tools:src="@drawable/expenses_logo"
                android:layout_gravity="center"
                android:contentDescription="@string/item_transaction_logo"
                />

            <TextView
                android:id="@+id/cat_transaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="TUMBAS"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="5dp"
            android:layout_gravity="center"
            >

            <TextView
                android:id="@+id/description_transaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_transaction_judul"
                android:fontFamily="@font/font_poppins"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="normal"
                />

            <TextView
                android:id="@+id/price_transaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_poppins"
                android:text="@string/item_transaction_price"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="normal"
                android:layout_marginTop="10dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.3"
            android:orientation="vertical"
            android:layout_gravity="center"
            >

            <TextView
                android:id="@+id/date_transaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_poppins"
                android:layout_gravity="end"
                android:gravity="end"
                android:text="@string/item_transaction_date"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="normal"
                app:layout_constraintStart_toEndOf="@id/description_transaction" />

            <Button
                android:id="@+id/edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@android:color/transparent"
                android:contentDescription="@string/item_transaction_edit"
                android:drawableStart="@drawable/baseline_edit_24"
                android:fontFamily="@font/font_poppins"
                android:gravity="bottom"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:text="@string/item_transaction_edit"
                android:textAllCaps="false"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/linear_layout_transaction"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:gravity="end"
                android:clickable="true"
                tools:ignore="UseCompoundDrawables">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/map_logo"
                    android:contentDescription="@string/item_transaction_map"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:id="@+id/location_transaction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_poppins"
                    android:text="@string/item_transaction_location"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@id/image_transaction"
                    android:gravity="end"
                    android:layout_gravity="center"
                    />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>