<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frameLayout"
    android:background="@color/primary"
    android:pointerIcon="none"
    tools:context=".TwibbonPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <include
        android:id="@+id/header_layout"
        layout="@layout/fragment_header_twibbon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        />

    <FrameLayout
        android:id="@+id/layout_scan"
        android:layout_width="270dp"
        android:layout_height="270dp"
        app:layout_constraintTop_toBottomOf="@id/header_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        >
        <androidx.camera.view.PreviewView
            android:id="@+id/previewView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/hasil_Foto"
            android:src="@drawable/twibbon_transparent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/twibbon_frame"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/twibbon_border"
            android:src="@drawable/twibbon_transparent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/twibbon_frame"/>

    </FrameLayout>

    <Button
        android:id="@+id/shutter_button"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_scan"
        android:background="@drawable/shutter_button"
        android:contentDescription="@string/twibbon_take_picture"
        />

    <ImageButton
        android:id="@+id/flip_camera"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="46dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/twibbon_flip_camera"
        android:src="@drawable/change_camera"
        app:layout_constraintStart_toEndOf="@id/shutter_button"
        app:layout_constraintTop_toBottomOf="@id/layout_scan" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/twibbon_text"
        app:layout_constraintTop_toBottomOf="@id/shutter_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/twibbon_after_take"
        android:fontFamily="@font/font_poppins"
        android:textColor="@color/secondary"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>