<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary"
    tools:context=".EditPage">


    <Button
        android:id="@+id/back_edit"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="70dp"
        tools:ignore="MissingConstraints" />
    <include
        android:id="@+id/header_layout"
        layout="@layout/fragment_header_transaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_layout"
        app:layout_constraintVertical_bias="0.241">

        <TextView
            android:id="@+id/label_judul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_poppins"
            android:text="@string/label_judul"
            android:textColor="@color/secondary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.054"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/field_judul"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_field"
            android:fontFamily="@font/font_poppins"
            android:hint="Masukkan nominal transaksi Anda"
            android:inputType="text"
            android:padding="12dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_judul" />

        <TextView
            android:id="@+id/label_nominal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/font_poppins"
            android:text="@string/label_nominal"
            android:textColor="@color/secondary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.051"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/field_judul" />

        <EditText
            android:id="@+id/field_nominal"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_field"
            android:fontFamily="@font/font_poppins"
            android:hint="Masukkan nominal transaksi Anda"
            android:inputType="text"
            android:padding="12dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_nominal" />

        <TextView
            android:id="@+id/label_kategori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/font_poppins"
            android:text="@string/label_kategori"
            android:textColor="@color/secondary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/field_nominal" />

        <RadioGroup
            android:id="@+id/field_kategori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:editable="false"
            android:enabled="false"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/label_lokasi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_kategori"
            tools:ignore="Deprecated">

            <RadioButton
                android:id="@+id/button_pengeluaran"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginHorizontal="2dp"
                android:fontFamily="@font/font_poppins"
                android:clickable="false"
                android:text="@string/kategori_pengeluaran"
                android:textColor="@color/secondary"

                />

            <RadioButton
                android:id="@+id/button_pemasukan"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:clickable="false"
                android:layout_marginHorizontal="2dp"
                android:fontFamily="@font/font_poppins"
                android:text="@string/kategori_pemasukan"
                android:textColor="@color/secondary"

                />
        </RadioGroup>

        <TextView
            android:id="@+id/label_lokasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/font_poppins"
            android:text="@string/label_lokasi"
            android:textColor="@color/secondary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias="0.051"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/field_kategori" />

        <EditText
            android:id="@+id/field_lokasi"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_field"
            android:fontFamily="@font/font_poppins"
            android:hint="Masukkan nominal transaksi Anda"
            android:inputType="text"
            android:padding="12dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_lokasi" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="112dp"
        android:background="@drawable/custom_button"
        android:text="Save"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/delete_button"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.492" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/logout_button"
        android:text="Delete"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/update_button"
        app:layout_constraintHorizontal_bias="0.726"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.494" />


</androidx.constraintlayout.widget.ConstraintLayout>